add update endpoint, handler, methods, refactor migration and model methods
